# tutorials

./: .gitignore  .travis.yml  README.md  source.txt
1-basics-part-i/: 1-scalar-types.proto  2-repeated-fields.proto  3-comments.proto  4-enums.proto
2-exercises-solutions/: date.proto  person.proto
3-basics-part-ii/: 2-nested-messages.proto  4-date-with-package.proto  4-person-with-package.proto
4-exercises-solutions/3-imports/: building.proto  street.proto
4-exercises-solutions/4-imports-with-packages/: building.proto  city.proto
6-data-evolution/: 1-reserved-tags-example.proto
7-advanced-concepts/: 2-map-example.proto  3-timestamp-example.proto  4-duration-example.proto  5-options-example.proto  6-services-definition.proto
DeepLearning_Optimizers/: Cargo.toml  README.md  rustfmt.toml
DeepLearning_Optimizers/gradient_descent/: Cargo.toml
DeepLearning_Optimizers/rmsprop_momentum/: Cargo.toml
DeepLearning_Optimizers/src/: lib.rs  main.rs  (+2 more)
blockchain/: BUILD.bazel  README.md  WORKSPACE
blockchain/src/: BUILD.bazel  mylib.go  unit_test.go
cards/: deck.go  deck_test.go  main.go
channels/: main.go
foo/: Cargo.toml
go/: source.txt
gradient_descent/: Cargo.toml
grpc/: source.txt
http/: main.go
maps/: main.go
python-swig-c/: .gitignore  Justfile  app.py  gfg.c  gfg.h  gfg.i  gfg.py  gfg_wrap.c
pytorch/: Dockerfile  Justfile  README.md  mnist_cnn.pt
rmsprop/: Cargo.toml
rust/: README.md
rust-plus-golang/: Makefile  README.md  binary_tree  binary_tree.go  main.go
vlang/: .gitignore  Justfile  channel.v  quick_sort.v  reflect.v
(+54 files in other folders)
