load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "src_lib",
    srcs = [
        "main.go",
        "mylib.go",
    ],
    importpath = "github.com/mihaigalos/code_templates/go/src",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "src_test",
    srcs = ["unit_test.go"],
    embed = [":src_lib"],
)
